--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -4,3 +4,10 @@
     gap: 2.5em;
     padding: 1em 5em;
 }
+
+.main_nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 1em;
+}
