--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -2,6 +2,7 @@
 
 .homepage {
     margin-top: 3em;
+    margin-bottom: 7em;
     align-items: center;
     display: flex;
     flex-direction: column;
