--- a/src/styles/pages/_cart.scss
+++ b/src/styles/pages/_cart.scss
@@ -1,3 +1,35 @@
-.cart {
-    margin-bottom: 43em;
+.cart_table {
+    margin: 2em 10em 10em
+}
+
+.cart_content {
+    display: flex;
+    flex-direction: row;
+    gap: 5em;
+    flex-wrap: wrap;
+    margin: 3em 5em;
+}
+
+.cart_content-card {
+    padding: 1em;
+    height: 25em; 
+    width: 18em;
+}
+
+.total {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.total_headings {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.total_numbers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
